--- a/0_resumen.tex
+++ b/0_resumen.tex
@@ -95,11 +95,12 @@ The skin is the largest organ in the body and the first barrier for defending ou
 
 In recent decades, enormous advances in the AI medical field have experienced significant improvements due to the use of deep networks. They can diagnose with reliability as well as speed. 
 
-The following project presents the use of deep learning algorithms in order to classify eight different diagnoses, such as melanoma, basal cell carcinoma, vascular lesion, and others of this kindIn this study, we design and test two of today's most commonly used convolutional networks in the context of skin lesion classification, using the 2019 ISIC dataset. This dataset presented data quality challenges, including resolution variations and very significant inter-class imbalance. To address the problem of dataset imbalance, we implemented two strategies: an under-sampling of the samples and an over-sampling of the minority classes. Synthetic minorities (SMOTE) were used to enrich the minority classes, resulting in a 20 \% increase in the total number of images processed.
+The following project presents the use of deep learning algorithms in order to classify eight different diagnoses, such as melanoma, basal cell carcinoma, vascular lesion, and other lesions. In this study, we design and test two of today's most commonly used convolutional networks in the context of skin lesion classification, using the 2019 ISIC dataset. This dataset presented quality challenges, including resolution variations and very significant \textbf{inter-class imbalances}. We implemented two strategies to solve the dataset problem: an \textbf{under-sampling} and an \textbf{over-sampling} of the minority classes. We use \textbf{Synthetic minorities (SMOTE technique)} to enrich the minority classes, resulting in a 20 \% increase in the total number of images processed.
 
-Transfer learning techniques using EfficientNet B0 and ResNet50 were employed for model training, demonstrating significant improvements in classification metrics during the transfer learning. In particular, ResNet50 showed higher performance when trained on the SMOTE-enriched dataset, which can be attributed to its more profound architecture benefiting from a larger dataset.
+Furthermore, we employ model training transfer learning techniques using EfficientNet B0 and ResNet50 as a model base, demonstrating significant improvements in classification metrics. In particular, ResNet50 showed higher performance when trained on the SMOTE-enriched dataset, and this can be attributed to its 
+ profound architecture benefiting from a larger dataset.
 
-This research contributes insights into optimizing skin lesion classification through data preprocessing, transfer learning, and model selection, paving the way for future enhancements in dermatological image analysis.
+This research contributes to a new understanding of skin lesion classification through data preprocessing, transfer learning, and model selection, paving the way for future enhancements in dermatological image analysis and early diagnosis. Finally, it also contributes exploring the use of a statistic technique like SMOTE to solve an imbalanced dataset challenge.
 
 
 
