--- a/1_introduccion.tex
+++ b/1_introduccion.tex
@@ -73,7 +73,7 @@ This project's main objective is the classification of dermoscopic images in ord
 %%% Methodology %%%
 %%%%%%%%%%%%%%%%%%%
 
-For the implementation of this project, we will use the Cross Industry Standard Process for Data Mining or \textbf{CRISP-DM} methodology. This methodology consists of six phases that are cyclically carried out and it allows feedback to previous phases in order to complement the deficiencies of other phases. The following diagram (figure 1.1) shows the six-phase cyclical circuit to be used in this methodology.
+For the implementation of this project, we will use the Cross Industry Standard Process for Data Mining or \textbf{CRISP-DM} methodology. This methodology consists of six phases that are cyclically carried out, and it allows feedback to previous phases in order to complement the deficiencies of other phases. The following diagram (figure 1.1) shows the six-phase cyclical circuit to be used in this methodology.
 
 \begin{figure}[ht]
     \begin{center}
@@ -89,7 +89,7 @@ The methodology phases and the adaptation to the project are described below:
 \begin{enumerate}
     \item \textbf{Business understanding}
     
-    The first phase of the \textbf{CRISP-DM} model starts understanding the project's main objectives. These are mentioned in the \textbf{ Goals section} above. At this stage of the project, licensing costs are reviewed. Concerning licensing cost in this project there is \textbf{no associated licensing cost}, because the data is left under an open licence (see \textbf{Licensing section}). Furthermore, the project plan is also created during this phase (see \textbf{project plan section}).
+    The first phase of the \textbf{CRISP-DM} model starts with understanding the project's main objectives. These are mentioned in the \textbf{ Goals section} above. At this stage of the project, licensing costs are reviewed. Concerning licensing cost in this project there is \textbf{no associated licensing cost}, because the data is left under an open licence (see \textbf{Licensing section}). Furthermore, the project plan is also created during this phase (see \textbf{project plan section}).
 
     \item \textbf{Data understanding}
     
@@ -106,17 +106,17 @@ The methodology phases and the adaptation to the project are described below:
     
     \item \textbf{Modelling}
 
-    In this phase, the modelling techniques required to achieve an optimal data model will be applied. As it is  shown in the phase diagram, it is a phase that usually builds on the data preparation phase, either to solve problems or to enrich the data. Additionally to model building, some model evaluation techniques will be required. As a result, a test plan document will be done.
+    In this phase, the modeling techniques required to achieve an optimal data model will be applied. As it is shown in the phase diagram, it is a phase that usually builds on the data preparation phase, either to solve problems or to enrich the data. Additionally, to model building, some model evaluation techniques will be required. As a result, a test plan document will be done.
 
     
     \item \textbf{Evaluation}
 
-    Once the objectives set requiered, during the initial phases have been obtained, an evaluation must be carried out to ensure that them were reached. This is done using the test plan designed in the previous phase. If necessary, the process will be reviewed and, depending on the results, the next steps will be planned. A benchmark well be carried out amont various models created, and the outstanding model is selected. 
+    Once the objectives set required during the initial phases have been obtained, an evaluation must be carried out to ensure that they were reached. This is done using the test plan designed in the previous phase. If necessary, the process will be reviewed, and depending on the results, the next steps will be planned. A benchmark will be carried out among various models created, and the outstanding model will be selected. 
 
     
     \item \textbf{Deployment}
 
-    At the time, the model has passed all the tests and has been approved, it is required to define a plan for its deployment. Thus, creating a final model is not the end of the project, but rather a milestone within it. A model put into production environment it is necesary to monitor and maintain constantly. Along with the previous, it is advisable to publish results that help to understand whether the objectives initially requested in phase 1 have been achieved. It is quite common that after the project has been put into production, new expectations are generated that make the model (project) generated be reconsidered. This is why \textbf{CRISP-DM} describes the life cycle for the data mining project in a circular framework, where the output feeds back into a new cycle that seeks the continuous improvement of the business.
+    At the time, the model has passed all the tests and has been approved, it is required to define a plan for its deployment. Thus, creating a final model is not the end of the project, but rather a milestone within it. A model put into a production environment is necessary to monitor and maintain constantly. Along with the previous, it is advisable to publish results that help to understand whether the objectives initially requested in phase 1 have been achieved. It is quite common that after the project has been put into production, new expectations are generated that make the model (project) generated be reconsidered. This is why \textbf{CRISP-DM} describes the life cycle for the data mining project in a circular framework, where the output feeds back into a new cycle that seeks the continuous improvement of the business.
 
     Our project is part of a work that will develop a minimum viable product. Finally, the outstanding model will be run on the dataset test to obtain the final metrics.
 
@@ -138,7 +138,7 @@ The project has been structured in \textbf{five phases} or modules, which in tur
     This module starts defining the project's plan: the relevant objectives of the project, the initial planning that will form the basis of the project, and the personal motivation to carry out the project on the chosen topic. During this phase, the form "Ethical and personal data protection protocol" will be filled out and presented.
     \item \textbf{Module 2 - State of Art}
     
-    During this module time, we will carry out a research phase in which we will search for previous or current scientific work related to this project the main topic. 
+    During this module time, we will carry out a research phase in which we will search for previous or current scientific work related to this project's main topic. 
     \item \textbf{Module 3 - Design \& implementation}
     
     The objectives of this activity are to implement the tasks necessary for the project's design and development according to the chosen scientific methodology. During this period, the progress made on it will be documented in order to complement the project document. 
@@ -179,12 +179,51 @@ The following table shows each of the phases, namely: the start and end dates, a
 
 
 
-The time evolution of the project is shown by the following Gantt graph.
+The time evolution of the project is shown in the following Gantt graphs.
 
 \begin{figure}[H]
     \begin{center}
-        \includegraphics[scale=0.43]{images/TFM_Planing.jpg}
-        \caption{Master's final project Gantt's chart}
+        \includegraphics[scale=0.30]{images/Introduccion/Planning/TFM_General_Planing.png}
+        \caption{Master's final project Gantt's chart. General view}
     \label{fig:Gantt}    
+    \end{center}
+\end{figure}
+
+
+\begin{figure}[H]
+    \begin{center}
+        \includegraphics[scale=0.50]{images/Introduccion/Planning/TFM_M1_Planing.png}
+        \caption{Master's final project Gantt's chart. Module 1 view}
+    \label{fig:Gantt_M1}    
+    \end{center}
+\end{figure}
+
+\begin{figure}[H]
+    \begin{center}
+        \includegraphics[scale=0.50]{images/Introduccion/Planning/TFM_M2_Planing.png}
+        \caption{Master's final project Gantt's chart. Module 2 view}
+    \label{fig:Gantt_M2}    
+    \end{center}
+\end{figure}
+
+\begin{figure}[H]
+    \begin{center}
+        \includegraphics[scale=0.28]{images/Introduccion/Planning/TFM_M3_Planing.png}
+        \caption{Master's final project Gantt's chart. Module 3 view}
+    \label{fig:Gantt_M3}    
+    \end{center}
+\end{figure}
+
+\hspace{1cm}
+\hspace{1cm}
+\hspace{1cm}
+\hspace{1cm}
+\hspace{1cm}
+
+\begin{figure}[H]
+    \begin{center}
+        \includegraphics[scale=0.32]{images/Introduccion/Planning/TFM_M4_Planing.png}
+        \caption{Master's final project Gantt's chart. Module 4 view}
+    \label{fig:Gantt_M4}    
     \end{center}
 \end{figure}
