--- a/Dermatological-lesion-classification.bib
+++ b/Dermatological-lesion-classification.bib
@@ -1,4 +1,63 @@
 
+@article{basgall_smote-bd_2018,
+	title = {{SMOTE}-{BD}: An Exact and Scalable Oversampling Method for Imbalanced Classification in Big Data},
+	volume = {18},
+	issn = {1666-6038, 1666-6046},
+	url = {https://journal.info.unlp.edu.ar/JCST/article/view/1122},
+	doi = {10.24215/16666038.18.e23},
+	shorttitle = {{SMOTE}-{BD}},
+	abstract = {The volume of data in today’s applications has meant a change in the way Machine Learning issues are addressed. Indeed, the Big Data scenario involves scalability constraints that can only be achieved through intelligent model design and the use of distributed technologies. In this context, solutions based on the Spark platform have established themselves as a de facto standard.},
+	pages = {e23},
+	number = {3},
+	journaltitle = {Journal of Computer Science and Technology},
+	shortjournal = {{JC}\&{ST}},
+	author = {Basgall, María José and Hasperué, Waldo and Naiouf, Marcelo and Fernández, Alberto and Herrera, Francisco},
+	urldate = {2024-01-13},
+	date = {2018-12-12},
+	langid = {english},
+	keywords = {{SMOTE}, {StateOfTheArt}, {TFM}},
+}
+
+@article{moreno_smote-i_2009,
+	title = {{SMOTE}-I: mejora del algoritmo {SMOTE} para balanceo de clases minoritarias},
+	shorttitle = {{SMOTE}-I},
+	abstract = {Resumen. Las técnicas de minería de datos están encaminadas a desarrollar algoritmos que sean capaces de tratar y analizar datos de forma automática con objeto de extraer de cualquier tipo de información subyacente en dichos datos. El problema del desbalanceo de los datos consiste en la predominancia de ciertos valores en los datos y la escasez o ausencia de otros que dificulta o impide la extracción de información. En este trabajo se presenta un nuevo algoritmo basado en {SMOTE} y llamado {SMOTE}-I que mejora al original con la la base de datos analizada. Palabras clave: {SMOTE}, {ENN}, desbalanceo de datos.},
+	author = {Moreno, J and Rodriguez, Daniel and Sicilia, M. and Riquelme, José and Ruiz, Y},
+	date = {2009-01-01},
+	keywords = {{SMOTE}, {StateOfTheArt}, {TFM}},
+}
+
+@article{chawla_smote_2002,
+	title = {{SMOTE}: Synthetic Minority Over-sampling Technique},
+	volume = {16},
+	rights = {Copyright (c)},
+	issn = {1076-9757},
+	url = {https://www.jair.org/index.php/jair/article/view/10302},
+	doi = {10.1613/jair.953},
+	shorttitle = {{SMOTE}},
+	abstract = {An approach to the construction of classifiers from    imbalanced datasets is described. A dataset is imbalanced if the    classification categories are not approximately equally    represented. Often real-world data sets are predominately composed of    ``normal'' examples with only a small percentage of ``abnormal'' or    ``interesting'' examples. It is also the case that the cost of    misclassifying an abnormal (interesting) example as a normal example    is often much higher than the cost of the reverse    error. Under-sampling of the majority (normal) class has been proposed    as a good means of increasing the sensitivity of a classifier to the    minority class. This paper shows that a combination of our method of    over-sampling the minority (abnormal) class and under-sampling the    majority (normal) class can achieve better classifier performance (in    {ROC} space) than only under-sampling the majority class.  This paper    also shows that a combination of our method of over-sampling the    minority class and under-sampling the majority class can achieve    better classifier performance (in {ROC} space) than varying the loss    ratios in Ripper or class priors in Naive Bayes. Our method of    over-sampling the minority class involves creating synthetic minority    class examples.  Experiments are performed using C4.5, Ripper and a    Naive Bayes classifier. The method is evaluated using the area under    the Receiver Operating Characteristic curve ({AUC}) and the {ROC} convex    hull strategy.},
+	pages = {321--357},
+	journaltitle = {Journal of Artificial Intelligence Research},
+	author = {Chawla, N. V. and Bowyer, K. W. and Hall, L. O. and Kegelmeyer, W. P.},
+	urldate = {2024-01-13},
+	date = {2002-06-01},
+	langid = {english},
+	keywords = {{SMOTE}, {StateOfTheArt}, {TFM}},
+}
+
+@online{alberto_funciones_2021,
+	title = {Funciones de error con Entropia: Cross Entropy y Binary Cross Entropy},
+	url = {https://rubialesalberto.medium.com/funciones-de-error-con-entropia-cross-entropy-y-binary-cross-entropy-8df8442cdf35},
+	shorttitle = {Funciones de error con Entropia},
+	abstract = {En este artículo vamos a descifrar el funcionamiento de la entropía cruzada, la entropía cruzada binaria y programar ambas funciones en…},
+	titleaddon = {Medium},
+	author = {Alberto, Rubiales},
+	urldate = {2024-01-07},
+	date = {2021-10-04},
+	langid = {english},
+	keywords = {{TFM}, building},
+}
+
 @online{noauthor_vascular_nodate,
 	title = {Vascular Lesions of the Skin - Dermatologic Disorders},
 	url = {https://www.msdmanuals.com/professional/dermatologic-disorders/benign-skin-tumors,-growths,-and-vascular-lesions/vascular-lesions-of-the-skin},
@@ -6,6 +65,7 @@
 	titleaddon = {{MSD} Manual Professional Edition},
 	urldate = {2024-01-03},
 	langid = {english},
+	keywords = {Introduction, {TFM}},
 }
 
 @article{hueso_dermatofibroma_2007,
